--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
+<html lang="pt-br">
+
 <head>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Aluraflix</title>
 </head>
 
 <body>
 
-<header>ALURAFLIX</header>
+    <header>ALURAFLIX</header>
 
-<h1>LILO E STITCH: 38 SEGREDOS QUE VOCÊ NÃO PERCEBEU!</h1>
-<p>#lilo stich</p>
+    <section>
+        <div>
+            <h1>LILO E STITCH: 38 SEGREDOS QUE VOCÊ NÃO PERCEBEU!</h1>
+            <p>#lilo stich</p>
+        </div>
 
 
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/z6KmOa1Svrk?si=EeqGnAlTzT-5-87W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/z6KmOa1Svrk?si=EeqGnAlTzT-5-87W"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
 </body>
+
+
+
+</html>
