--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
-    <link rel="stylesheet" href="styles.css" />
-    <title>Aluraflix</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <title>stich e seus segredos</title>
 </head>
 
 <body>
+    <header>stich e seus segredos</header>
 
-    <header>ALURAFLIX</header>
-
-    <section>
-        <div>
-            <h1>LILO E STITCH: 38 SEGREDOS QUE VOCÊ NÃO PERCEBEU!</h1>
-            <p>#lilo stich</p>
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>LILLO STICH: 38 segredos que você não percebeu</h1>
+            <p>#lillo stich</p>
         </div>
 
-
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/z6KmOa1Svrk?si=EeqGnAlTzT-5-87W"
-                title="YouTube video player" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/z6KmOa1Svrk?si=x459g0y9Chzn3EHN"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
+    <section class="categoria">
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/embed/l0iQpvNNQEU?si=N1VMXVLzSkLD05o3"  />
+        <img src=
+            </a>
+            <a href="https://www.youtube.com/embed/GwF4jztcLZE?si=CfMiTs4qJPJfitue" 
+                <img src=
+            </a>
+            <a href="https://www.youtube.com/embed/UqOYxKV_8iw?si=0yDSIdP72_wAu1oP"
+                <img src=>
+            </a>
+            <a href="https://www.youtube.com/embed/l0iQpvNNQEU?si=i-Ov8OQKsP0yGGWL" 
+                <img src=
+            </a>
+            <a href="https://www.youtube.com/embed/GwF4jztcLZE?si=Rc9G557VZXou-T5f" 
+                <img src=
+            </a>
+        </div>
+    </section><iframe width="560" height="315" src=
 </body>
 
-
-
-</html>
+</htpl
