--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/embed/l0iQpvNNQEU?si=N1VMXVLzSkLD05o3"  />
+            <a href="https://www.youtube.com/embed/l0iQpvNNQEU?si=N1VMXVLzSkLD05o3" />
         <img src=
             </a>
-            <a href="https://www.youtube.com/embed/GwF4jztcLZE?si=CfMiTs4qJPJfitue" 
+            <a href="https://www.youtube.com/embed/GwF4jztcLZE?si=CfMiTs4qJPJfitue">
                 <img src=
             </a>
-            <a href="https://www.youtube.com/embed/UqOYxKV_8iw?si=0yDSIdP72_wAu1oP"
+            <a href="https://www.youtube.com/embed/UqOYxKV_8iw?si=0yDSIdP72_wAu1oP">
                 <img src=>
             </a>
-            <a href="https://www.youtube.com/embed/l0iQpvNNQEU?si=i-Ov8OQKsP0yGGWL" 
+            <a href="https://www.youtube.com/embed/l0iQpvNNQEU?si=i-Ov8OQKsP0yGGWL">
                 <img src=
             </a>
             <a href="https://www.youtube.com/embed/GwF4jztcLZE?si=Rc9G557VZXou-T5f" 
                 <img src=
             </a>
         </div>
-    </section><iframe width="560" height="315" src=
+    </section>
 </body>
 
 </htpl
