--- a/index.html
+++ b/index.html
@@ -29,23 +29,27 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/embed/l0iQpvNNQEU?si=N1VMXVLzSkLD05o3" />
-        <img src=
+            <a href="https://www.youtube.com/embed/l0iQpvNNQEU?si=N1VMXVLzSkLD05o3">
+                <img src="https://img.youtube.com/vi/N1VMXVLzSkLD05o3/maxresdefault.jpg">
             </a>
             <a href="https://www.youtube.com/embed/GwF4jztcLZE?si=CfMiTs4qJPJfitue">
-                <img src=
+                <img src=https://img.youtube.com/vi/l0iQpvNNQEU/maxresdefault.jpg>
             </a>
             <a href="https://www.youtube.com/embed/UqOYxKV_8iw?si=0yDSIdP72_wAu1oP">
-                <img src=>
+                <img src=https://img.youtube.com/vi/UqOYxKV_8iw/maxresdefault.jpg>
             </a>
-            <a href="https://www.youtube.com/embed/l0iQpvNNQEU?si=i-Ov8OQKsP0yGGWL">
-                <img src=
+            <a href="https://www.youtube.com/embed/_aJ6P8binoU?si=-vTnpQ5VUZ-eDbW4">
+                <img src="https://img.youtube.com/vi/_aJ6P8binoU/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/embed/GwF4jztcLZE?si=Rc9G557VZXou-T5f" 
-                <img src=
+            <a href="https://www.youtube.com/embed/nl6XRTGuWC8?si=XLy2B5EzhIakv-8L">
+                <img src=https://img.youtube.com/vi/_aJ6P8binoU/maxresdefault.jpg>
             </a>
+            <a href="https://www.youtube.com/embed/5y2FIYfkwmk?si=mdyxFFd7uZqJLpee">
+                <img src=https://img.youtube.com/vi/dyxFFd7uZqJLpee/maxresdefault.jpg>
+            </a>
+
         </div>
     </section>
 </body>
 
-</htpl
+</html>
